[Modal] Fixed horizontal scroll issue

--- a/components/Modal/Modal.less
+++ b/components/Modal/Modal.less
@@ -2,7 +2,7 @@
 
 :local {
   .bodyClass {
-    overflow-y: hidden !important;
+    overflow: hidden !important;
   }
 
   .root {
